# c99-compiler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  astnode.h  astnodegeneric.h  asttypes.c  asttypes.h  asttypes.txt  attnode.h  common.h  decl.c  decl.h  declarator.c  declarator.h  declspec.c  declspec.h  errorutils.c  errorutils.h  laterparsing.txt  lex.yy.c  lex.yy.h  lexer  lexer.l  lexertest  lexertest.c  numutils.c  numutils.h  parser.h  parser.y  printutils.h  scope.c  scope.h  stringutils.c  stringutils.h  structunion.c  structunion.h  symtab.c  symtab.h  (+2 more)
diffs/: diff.out  test.out
dtests/: base.c  fn1.out  scope1.c
include/: astnode.h  common.h  decl.h  declspec.h  lexer.yy.h  parser.h  printutils.h  quads.h  scope.h  stmt.h  structunion.h  symtab.h
include/asmgen/: asm.h
include/lexer/: numutils.h  stringutils.h  unicodeutils.h
include/lexerutils/: numutils.h
include/parser/: astnode.h  decl.h  declspec.h  parser.h  printutils.h  scope.h  stmt.h  structunion.h  symtab.h
include/quads/: cfquads.h  exprquads.h  printutils.h  quads.h  sizeof.h
lexerutils/: errorutils.c
ltests/: README
ltests/extra/: helloworld.c
proj2_res/: exprtests.out
ptests/: assign2.ps  exprtests.out
res/: README.md  assign1.ps  chars.c  helloworld.c  kw.c  num.c  op.c  simple.c
res/diffs/: diff.out  test.err  test.out
res/dtests/: assign3.ps  base.out  fn1.c  scope1.out  struct1.c  struct1.out  struct2.c  struct2.out  td1.c  td1.out  test.c
res/ltests/: ltest.err  ltest.out
res/ptests/: exprtests.c
res/qtests/: assign5.ps  tc1.c  tc2.c  tc3.c  tc4.c
res/scratch/: TODO  astnodegeneric.h  asttypes.c  asttypes.h  asttypes.txt  laterparsing.txt  old-makefile  scratch  test.c  wchartest2.c
res/stests/: assign4.ps  t1.c  t1.out  t2.c  t2.out  t3.c  t3.out
res/ttests/: add_two.c  assign6.ps  fibonacci.c  main.c  multidim_test.c  simple_function.c  tc1.c  tc3.c
scratch/: laterparsing.txt
src/: common.c  decl.c  declspec.c  lexer.l  lexer.yy.c  main.c  parser.y  printutils.c  quads.c  scope.c  structunion.c  symtab.c
src/asmgen/: asm.c
src/lexer/: errorutils.c  lexer.l  numutils.c  stringutils.c  unicodeutils.c
src/lexerutils/: errorutils.c  numutils.c  stringutils.c  unicodeutils.c
src/parser/: decl.c  declspec.c  parser.y  printutils.c  scope.c  structunion.c  symtab.c
src/quads/: cfquads.c  exprquads.c  printutils.c  quads.c  sizeof.c
test/: wchartest.c
